# VoxCPM

./: .gitignore  README.md  README_zh.md  app.py  app_local.py  lora_ft_webui.py  pyproject.toml
conf/voxcpm_v2/: voxcpm_finetune_all.yaml  voxcpm_finetune_lora.yaml
docs/: finetune.md
scripts/: test_voxcpm_ft_infer.py  test_voxcpm_lora_infer.py  train_voxcpm_finetune.py
src/voxcpm/: cli.py  core.py  zipenhancer.py
src/voxcpm/model/: utils.py  voxcpm.py  voxcpm2.py
src/voxcpm/modules/audiovae/: audio_vae_v2.py
src/voxcpm/modules/locdit/: unified_cfm.py
src/voxcpm/modules/minicpm4/: model.py
src/voxcpm/training/: validate.py
tests/: test_validate.py
