[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "voxcpm"
dynamic = ["version"]
description = "VoxCPM: Tokenizer-Free TTS for Context-Aware Speech Generation and True-to-Life Voice Cloning"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "OpenBMB", email = "openbmb@gmail.com"}
]
maintainers = [
    {name = "OpenBMB", email = "openbmb@gmail.com"}
]
keywords = ["voxcpm", "text-to-speech", "tts", "speech-synthesis", "voice-cloning", "ai", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec",
    "transformers<5.0.0",
    "einops",
    "gradio",
    "inflect",
    "addict",
    "wetext",
    "modelscope>=1.34.0",
    "datasets>=4.5.0,<4",
    "huggingface-hub",
    "pydantic",
    "tqdm",
    "simplejson",
    "sortedcontainers",
    "soundfile",
    "librosa",
    "matplotlib",
    "funasr",
    "spaces",
    "argbind",
    "safetensors"

]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "black>=26.1.0",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[project.scripts]
voxcpm = "voxcpm.cli:main"

[project.urls]
Homepage = "https://github.com/OpenBMB/VoxCPM"
Repository = "https://github.com/OpenBMB/VoxCPM.git"
Documentation = "https://github.com/OpenBMB/VoxCPM#readme"
"Bug Tracker" = "https://github.com/OpenBMB/VoxCPM/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["voxcpm*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
